--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -59,6 +59,7 @@
                 />
 
             <EditText
+                android:id="@+id/emailForget"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="23sp"
@@ -73,16 +74,18 @@
                 />
 
             <Button
-                android:layout_width="130dp"
+                android:id="@+id/btnForget"
+                android:layout_width="190dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:backgroundTint="@color/colorApp"
-                android:text="Sign in"
+                android:text="Reset password"
                 app:cornerRadius="30sp"
                 android:textStyle="bold"
                 android:layout_margin="15sp"/>
 
             <Button
+                android:id="@+id/btnBack"
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
